2005-06-17  Richard Williamson   <rjw@apple.com>

	Changes by Mitz Pettel
        Reviewed by Richard Williamson.

	Fixed http://bugzilla.opendarwin.org/show_bug.cgi?id=3545

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (reverseCharactersInRun):
        (-[WebTextRenderer _ATSU_pointToOffset:style:position:reversed:includePartialGlyphs:]):

2005-06-17  John Sullivan  <sullivan@apple.com>

        Reviewed by Chris.

        - fixed <rdar://problem/4151001> Reloading javascript-spawned window with no URL erases its contents

        * WebView.subproj/WebFrame.m:
        (-[WebFrame reload]):
        do nothing if URL is zero-length

2005-06-14  John Sullivan  <sullivan@apple.com>

        Changes by Devin Lane.
        Reviewed by me.

        - fixed <rdar://problem/3766909> PDF viewing could use a zoom control other than the one in the context menu

        * WebView.subproj/WebPDFView.h:
        now implements protocol _web_WebDocumentTextSizing
        * WebView.subproj/WebPDFView.m:
        (-[WebPDFView _updateScalingToReflectTextSize]):
        new method, sets the PDF scaling from the text size multiplier
        (-[WebPDFView setDataSource:]):
        call _updateScalingToReflectTextSize
        (-[WebPDFView _web_textSizeMultiplierChanged]):
        implementation of protocol _web_WebDocumentTextSizing, calls _updateScalingToReflectTextSize

2005-06-14  John Sullivan  <sullivan@apple.com>

        Reviewed by Dave Harrison.

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _delayedEndPrintMode:]):
        After discussing this with Dave, I made this method both more debugger-friendly with asserts for
        the cases we don't think could ever happen, and more paranoid by handling these cases in deployment
        builds.

2005-06-14  Darin Adler  <darin@apple.com>

        - fixed build for Xcode 2.1

        * WebKit.pbproj/project.pbxproj: Use BUILT_PRODUCTS_DIR instead of SYMROOT to search for the